unpackaged/main/default/objects/Opportunity/fields/Apellido_Materrno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materrno__c</fullName>
    <formula>Account.Apellidomaterno_cta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Materrno</label>
    <type>Text</type>
</CustomField>