unpackaged/main/default/objects/Opportunity/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>ASESOR</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>GENERICO</value>
        </filterItems>
        <filterItems>
            <field>User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>$Source.Nombre_Fraccionamiento__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Procesos_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>