unpackaged/main/default/objects/Opportunity/fields/Cambio_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Asesor</label>
    <type>Checkbox</type>
</CustomField>