unpackaged/main/default/objects/Opportunity/fields/Cambio_Canal_y_Subcanal__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Canal_y_Subcanal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Canal y Subcanal</label>
    <type>Checkbox</type>
</CustomField>