unpackaged/main/default/objects/Opportunity/fields/Cambio_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Colaborador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Colaborador</label>
    <type>Checkbox</type>
</CustomField>