unpackaged/main/default/objects/Opportunity/fields/Cambio_Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Lead_Profiler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Lead Profiler</label>
    <type>Checkbox</type>
</CustomField>