unpackaged/main/default/objects/Opportunity/fields/Cambio_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Prospectador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Prospectador</label>
    <type>Checkbox</type>
</CustomField>