unpackaged/main/default/objects/Opportunity/fields/Canal_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venta__c</fullName>
    <label>Canal de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal_de_Venta</valueSetName>
    </valueSet>
</CustomField>