unpackaged/main/default/objects/Opportunity/fields/Canal_de_venta_anterior__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_venta_anterior__c</fullName>
    <label>Canal de venta anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>