unpackaged/main/default/objects/Opportunity/fields/Canal_y_subcanal_de_venta_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Canal_y_subcanal_de_venta_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canal y subcanal de venta aprobado</label>
    <type>Checkbox</type>
</CustomField>