unpackaged/main/default/objects/Opportunity/fields/Cantidad_Cobranzas_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Cobranzas_Comerciales__c</fullName>
    <label>Cantidad Cobranzas Comerciales</label>
    <summaryForeignKey>Cobranza_Comercial__c.Proceso_Venta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>