unpackaged/main/default/objects/Opportunity/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp;AccountId&amp;&quot;/view&quot;,
IF(
OR( Account.RecordType.Name = &quot;PROSPECTO PERSONA MORAL&quot;,
Account.RecordType.Name = &quot;AFLUENTE PERSONA MORAL&quot;,
Account.RecordType.Name = &quot;CLIENTE PERSONA MORAL&quot;
),
Account.Name,
Account.Nombre__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>