unpackaged/main/default/objects/Opportunity/fields/Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Comercial</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>