unpackaged/main/default/objects/Opportunity/fields/Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador Javer</label>
    <referenceTo>Colaborador_Javer__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>