unpackaged/main/default/objects/Opportunity/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <formula>Account.CorreoElectronico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo electrónico</label>
    <type>Text</type>
</CustomField>