unpackaged/main/default/objects/Opportunity/fields/Cr_dito_En__c.field-meta.xml
<CustomField>
    <fullName>Cr_dito_En__c</fullName>
    <label>Crédito En</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pesos</fullName>
                <default>true</default>
                <label>Pesos</label>
            </value>
            <value>
                <fullName>VSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>