unpackaged/main/default/objects/Opportunity/fields/Estado_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_aprobacion__c</fullName>
    <label>Estado de aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Recuperado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>