unpackaged/main/default/objects/Opportunity/fields/Estatus_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Formula__c</fullName>
    <formula>TEXT( StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>