unpackaged/main/default/objects/Opportunity/fields/Etapa_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Etapa_de_Venta__c</fullName>
    <label>Etapa de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserva</fullName>
            </value>
            <value>
                <fullName>Formalización</fullName>
            </value>
            <value>
                <fullName>Escrituración</fullName>
            </value>
            <value>
                <fullName>Exigible</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Rechazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>