unpackaged/main/default/objects/Opportunity/fields/Existe_Reestructura__c.field-meta.xml
<CustomField>
    <fullName>Existe_Reestructura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existe Reestructura?</label>
    <type>Checkbox</type>
</CustomField>