unpackaged/main/default/objects/Opportunity/fields/Fecha_Asignacion_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Asignacion_Asesor__c</fullName>
    <label>Fecha Asignación Asesor</label>
    <type>Date</type>
</CustomField>