unpackaged/main/default/objects/Opportunity/fields/Fecha_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cancelacion__c</fullName>
    <label>Fecha Cancelación</label>
    <type>Date</type>
</CustomField>