unpackaged/main/default/objects/Opportunity/fields/Fecha_de_Captura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Captura__c</fullName>
    <formula>Account.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Captura</label>
    <type>Date</type>
</CustomField>