unpackaged/main/default/objects/Opportunity/fields/Fecha_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Reserva__c</fullName>
    <label>Fecha de Reserva</label>
    <type>Date</type>
</CustomField>