unpackaged/main/default/objects/Opportunity/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filterItems>
        <filterItems>
            <field>Fraccionamiento__c.Activo_frac__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Fraccionamiento_autorizado__c</field>
            <operation>equals</operation>
            <value>TODOS</value>
        </filterItems>
        <filterItems>
            <field>$User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <filterItems>
            <field>Fraccionamiento__c.Name</field>
            <operation>contains</operation>
            <valueField>Fraccionamiento__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>