unpackaged/main/default/objects/Opportunity/fields/Fraccionamiento_Text__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Text__c</fullName>
    <label>Fraccionamiento_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>