unpackaged/main/default/objects/Opportunity/fields/Id_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Id_Proceso_AR__c</fullName>
    <externalId>true</externalId>
    <label>Id Proceso AR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>