unpackaged/main/default/objects/Opportunity/fields/Inconsistencia__c.field-meta.xml
<CustomField>
    <fullName>Inconsistencia__c</fullName>
    <label>Inconsistencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Datos Laborales</fullName>
            </value>
            <value>
                <fullName>Problema con RFC</fullName>
            </value>
            <value>
                <fullName>Sin Acta de Nacimiento</fullName>
            </value>
            <value>
                <fullName>Sin Inconsistencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>