unpackaged/main/default/objects/Opportunity/fields/Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profiler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Profiler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>