unpackaged/main/default/objects/Opportunity/fields/Monitor__c.field-meta.xml
<CustomField>
    <fullName>Monitor__c</fullName>
    <formula>IMAGE(&quot;https://javer--fresh--c.sandbox.vf.force.com/resource/1682106726000/Monitor?&quot;, &quot;Monitor de Estatus&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitor</label>
    <type>Text</type>
</CustomField>