unpackaged/main/default/objects/Opportunity/fields/Motivo_cambio_canal_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cambio_canal_de_venta__c</fullName>
    <label>Motivo cambio canal de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>