unpackaged/main/default/objects/Opportunity/fields/Motivo_cambio_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cambio_Colaborador_Javer__c</fullName>
    <label>Motivo cambio Colaborador Javer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>