unpackaged/main/default/objects/Opportunity/fields/Motivo_cambio_Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cambio_Lead_Profiler__c</fullName>
    <label>Motivo cambio Lead Profiler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>