unpackaged/main/default/objects/Opportunity/fields/Motivo_cambio_prospectador__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cambio_prospectador__c</fullName>
    <label>Motivo cambio prospectador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>