unpackaged/main/default/objects/Opportunity/fields/NSS__c.field-meta.xml
<CustomField>
    <fullName>NSS__c</fullName>
    <formula>Account.NSS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSS</label>
    <type>Text</type>
</CustomField>