unpackaged/main/default/objects/Opportunity/fields/Numero_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Cliente__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp;AccountId&amp;&quot;/view&quot;, Account.Numero_de_Cliente_AutoNum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Cliente</label>
    <type>Text</type>
</CustomField>