unpackaged/main/default/objects/Opportunity/fields/Numero_Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Numero_Proceso_de_Venta__c</fullName>
    <description>2-4993368.</description>
    <displayFormat>2-{0000000000}</displayFormat>
    <label>Número Proceso de Venta</label>
    <type>AutoNumber</type>
</CustomField>