unpackaged/main/default/objects/Opportunity/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <formula>TEXT(Account.Origen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen</label>
    <type>Text</type>
</CustomField>