unpackaged/main/default/objects/Opportunity/fields/Otro_Telefono_Eliminado__c.field-meta.xml
<CustomField>
    <fullName>Otro_Telefono_Eliminado__c</fullName>
    <label>Otro Teléfono_eliminado</label>
    <type>Phone</type>
</CustomField>