unpackaged/main/default/objects/Opportunity/fields/OtroTelefono__c.field-meta.xml
<CustomField>
    <fullName>OtroTelefono__c</fullName>
    <formula>Account.Otro_Telefono__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otro Teléfono</label>
    <type>Text</type>
</CustomField>