unpackaged/main/default/objects/Opportunity/fields/Pendiente_Escriturar__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_Escriturar__c</fullName>
    <label>Pendiente Escriturar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desperfilado</fullName>
            </value>
            <value>
                <fullName>Enganche</fullName>
            </value>
            <value>
                <fullName>Hasta próximo Bimestre</fullName>
            </value>
            <value>
                <fullName>Otros Créditos</fullName>
            </value>
            <value>
                <fullName>Tramitología</fullName>
            </value>
            <value>
                <fullName>Venta sin DTU</fullName>
            </value>
            <value>
                <fullName>Ventas sin DTU Entregable</fullName>
            </value>
            <value>
                <fullName>Ventas sin DTU No Entregable</fullName>
            </value>
            <value>
                <fullName>Decisión del Cliente</fullName>
            </value>
            <value>
                <fullName>Sin Pendientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>