unpackaged/main/default/objects/Opportunity/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Procesos de Ventas</relationshipLabel>
    <relationshipName>Procesos_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>