unpackaged/main/default/objects/Opportunity/fields/Plazo_del_Credito__c.field-meta.xml
<CustomField>
    <fullName>Plazo_del_Credito__c</fullName>
    <label>Plazo del Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 años</fullName>
            </value>
            <value>
                <fullName>10 años</fullName>
            </value>
            <value>
                <fullName>15 años</fullName>
            </value>
            <value>
                <fullName>20 años</fullName>
            </value>
            <value>
                <fullName>25 años</fullName>
            </value>
            <value>
                <fullName>30 años</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>