unpackaged/main/default/objects/Opportunity/fields/Precio_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo__c</fullName>
    <formula>1200000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>