unpackaged/main/default/objects/Opportunity/fields/Proceso_Cancelado_por_Resolicitud__c.field-meta.xml
<CustomField>
    <fullName>Proceso_Cancelado_por_Resolicitud__c</fullName>
    <label>Proceso Cancelado por Resolicitud</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cancelado por Resolicitud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>