unpackaged/main/default/objects/Opportunity/fields/Proceso_de_aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_aprobaci_n__c</fullName>
    <description>Utilizado para saber el proceso de aprobación ejecutado y saber el campo de lookup a actualizar (los valores se asignan en directamente en los procesos de aprobación).
Visible solo para el admin</description>
    <inlineHelpText>Utilizado para saber el proceso de aprobación ejecutado y saber el campo de lookup a actualizar (los valores se asignan en directamente en los procesos de aprobación).
Visible solo para el admin</inlineHelpText>
    <label>Proceso de aprobación</label>
    <length>2</length>
    <type>Text</type>
</CustomField>