unpackaged/main/default/objects/Opportunity/fields/Proceso_de_Venta_Formula__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Opportunity/&quot; &amp; Id &amp;&quot;/view&quot;, 
										Numero_Proceso_de_Venta__c &amp; &quot; - &quot; &amp; 
										Fraccionamiento__r.Name &amp; &quot; - &quot; &amp;
										 Prototipo__r.Nombre_Prototipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso de Venta</label>
    <type>Text</type>
</CustomField>