unpackaged/main/default/objects/Opportunity/fields/Producto_de_la_Financiera__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_la_Financiera__c</fullName>
    <label>Producto de la Financiera</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Financiera__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Producto_de_la_Financiera</valueSetName>
    </valueSet>
</CustomField>