unpackaged/main/default/objects/Opportunity/fields/Producto_financiero__c.field-meta.xml
<CustomField>
    <fullName>Producto_financiero__c</fullName>
    <label>Producto financiero</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Credito__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Producto_Financiero</valueSetName>
    </valueSet>
</CustomField>