unpackaged/main/default/objects/Opportunity/fields/Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Prospectador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospectador</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>PROSPECTADOR</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>GENERICO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>