unpackaged/main/default/objects/Opportunity/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor ingresado no coincide con los prototipos disponibles para el fraccionamiento</errorMessage>
        <filterItems>
            <field>Prototipo__c.Fraccionamiento__c</field>
            <operation>equals</operation>
            <valueField>$Source.Fraccionamiento__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>