unpackaged/main/default/objects/Opportunity/fields/R_gimen_Patrimonial_Matrimonio__c.field-meta.xml
<CustomField>
    <fullName>R_gimen_Patrimonial_Matrimonio__c</fullName>
    <label>Régimen Patrimonial Matrimonio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Aplica</fullName>
            </value>
            <value>
                <fullName>Separación de Bienes</fullName>
            </value>
            <value>
                <fullName>Sociedad Conyugal</fullName>
            </value>
            <value>
                <fullName>Sociedad Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>