unpackaged/main/default/objects/Opportunity/fields/Referencia_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Bancaria__c</fullName>
    <label>Referencia Bancaria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>