unpackaged/main/default/objects/Opportunity/fields/Resolicitud__c.field-meta.xml
<CustomField>
    <fullName>Resolicitud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolicitud</label>
    <type>Checkbox</type>
</CustomField>