unpackaged/main/default/objects/Opportunity/fields/Revision_Rol_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Revision_Rol_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión Rol de Venta</label>
    <type>Checkbox</type>
</CustomField>