unpackaged/main/default/objects/Opportunity/fields/Segundo_Credito__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Credito__c</fullName>
    <label>Segundo Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>