unpackaged/main/default/objects/Opportunity/fields/Sub_Canal_anterior__c.field-meta.xml
<CustomField>
    <fullName>Sub_Canal_anterior__c</fullName>
    <label>Sub Canal anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>