unpackaged/main/default/objects/Opportunity/fields/Subestatus__c.field-meta.xml
<CustomField>
    <fullName>Subestatus__c</fullName>
    <description>Es el estatus en que se encuentre el proceso de venta referente a su plan de ventas, está por aprobar, aprobado etc, o si dicho proceso ya está en firmas, firmado etc.</description>
    <label>Subestatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En Firmas</fullName>
            </value>
            <value>
                <fullName>Por Entregar</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>