unpackaged/main/default/objects/Opportunity/fields/Telefono_Casa_eliminado__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Casa_eliminado__c</fullName>
    <label>Teléfono Casa_eliminado</label>
    <type>Phone</type>
</CustomField>