unpackaged/main/default/objects/Opportunity/fields/TelefonoCasa__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCasa__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Casa</label>
    <type>Text</type>
</CustomField>