unpackaged/main/default/objects/Opportunity/fields/TelefonoCelular__c.field-meta.xml
<CustomField>
    <fullName>TelefonoCelular__c</fullName>
    <formula>Account.TelefonoCelular__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Celular</label>
    <type>Text</type>
</CustomField>